# oct-segmenter

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE.md  README.md  build.sh  oct_image_segmentation_models  pyproject.toml  requirements.txt  run.py  setup.py
.dvc/: config
.github/workflows/: build_and_publish_artifacts.yml
data/contrast-enhanced-full-frame-dataset-1/: .gitignore  contrast-enhanced-full-frame-dataset-1.tar.gz.dvc  test_dataset.hdf5.tar.gz.dvc  training_dataset.hdf5.tar.gz.dvc
data/contrast-enhanced-half-frame-dataset-1/: .gitignore  contrast-enhanced-half-frame-dataset-1.tar.gz.dvc  test_dataset.hdf5.tar.gz.dvc  training_dataset.hdf5.tar.gz.dvc
data/experiment-10/: .gitignore  README.md  experiment-10-images.tar.gz.dvc  test_dataset.hdf5.tar.gz.dvc
data/experiment-11/: .gitignore  experiment-11-images.tar.gz.dvc
data/experiment-12/: .gitignore  images_experiment_12.tar.gz.dvc
data/experiment-14/: .gitignore  images_experiment_14.tar.gz.dvc  trimmed_images_experiment_14.tar.gz.dvc
data/full-frame-dataset-1/: .gitignore  full_frame_dataset.tar.gz.dvc  test_dataset.hdf5.tar.gz.dvc  training_dataset.hdf5.tar.gz.dvc
data/half-frame-dataset/: half-frame-dataset.tar.gz.dvc  test_dataset.hdf5.dvc  training_dataset.hdf5.dvc
data/half-frame-dataset-1/: .gitignore
data/resized-trimmed-ce-half-frame-dataset-1/: .gitignore  resized_trimmed_ce_hf_dataset.tar.gz.dvc  test_dataset.hdf5.tar.gz.dvc  training_dataset.hdf5.tar.gz.dvc
docker/: Dockerfile  Dockerfile.local
docs/: BIOWULF.md
experiments/: .gitignore
experiments/experiment-10/: .gitignore  (+2 more)
image-pre-processing/: generate_dataset.py  generate_test_dataset.py  generate_training_dataset.py  label_image.py  merge_datasets.py  preprocess.py  read_image.py  utils.py
oct_segmenter/: __init__.py  __main__.py
pil-test/: mask_float_pilv9_1_1.txt  mask_int_pilv9_1_1.txt  points_float_pilv9_0_1.json  points_int_pilv9_0_1.json  test_pil.py
pre-processing/: preprocess.py  utils.py
preprocessing-scripts/: extract_png_from_labelme.py  generate_dataset.py  generate_dataset_images_directories.py  generate_image_label.py  generate_image_label_labelme.py  generate_image_label_mask.py  generate_image_label_visual_core.py  generate_image_label_wayne.py  generate_test_dataset.py  generate_training_dataset.py  replicate_half_frame_from_full_frame.py
singularity/: Singularity  oct-segmenter.def
slurm/: oct-segmenter.sh  training-config.json
(+143 files in other folders)
